--- a/package.json
+++ b/package.json
@@ -10,5 +10,14 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
-  }
+  },
+  "description": "<h1>",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "wq"
+  },
+  "author": "",
+  "license": "ISC"
 }
